<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_eaeeef"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_eaeeef"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/ll_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/add_lable_dialog_shape"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/title_top_bottom">


                    <RelativeLayout
                        android:id="@+id/second_bar_back"
                        android:layout_width="35dp"
                        android:layout_height="70dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="5dp"
                            android:background="@mipmap/ic_return" />
                    </RelativeLayout>


                    <TextView
                        android:id="@+id/second_bar_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text=""
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp" />
                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/phone_number"
                        android:textSize="14sp" />


                    <EditText
                        android:id="@+id/user_mobile_no"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="1dp"
                        android:layout_weight="3"
                        android:background="@color/colorWhite"
                        android:hint="135xxxxxxxx"
                        android:inputType="number"
                        android:maxLength="30"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@mipmap/link" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/old_password"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/old_login_ed_pin"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="1dp"
                        android:layout_weight="3"
                        android:background="@color/colorWhite"
                        android:hint="xxxxxx"
                        android:inputType="textPassword"
                        android:maxLength="16"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@mipmap/link" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/new_password"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/new_login_ed_pin"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="1dp"
                        android:layout_weight="3"
                        android:background="@color/colorWhite"
                        android:hint="xxxxxx"
                        android:inputType="textPassword"
                        android:maxLength="16"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/change_password_bt"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/ten_blue_shape"
                android:gravity="center"
                android:text="@string/modify"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/top_blue_unselected1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/color_333333"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>